--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_launcher"
             android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+            android:theme="@style/ShareToObsidian">
 
         <activity
                 android:name=".ShareReceiverActivity"
                 android:exported="true"
-                android:label="Сохранить в Obsidian">
+                android:label="Сохранить в Obsidian"
+                android:theme="@style/ShareToObsidian">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -31,12 +32,14 @@
         <activity
                 android:name=".SettingsActivity"
                 android:label="Сохранить в Obsidian - настройки"
-                android:exported="false" />
+                android:exported="false"
+                android:theme="@style/ShareToObsidian"/>
 
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
-                android:label="Сохранить в Obsidian - настройки"
+                android:label="Сохранить в Obsidian"
+                android:theme="@style/ShareToObsidian"
         >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
