--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     </queries>
 
     <application
+            android:label="@string/app_name"
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:supportsRtl="true"
@@ -20,7 +21,7 @@
         <activity
                 android:name=".ShareReceiverActivity"
                 android:exported="true"
-                android:label="Сохранить в Obsidian"
+                android:label="@string/app_name"
                 android:theme="@style/ShareToObsidian">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -38,7 +39,7 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
-                android:label="Сохранить в Obsidian"
+                android:label="@string/app_name"
                 android:theme="@style/ShareToObsidian"
         >
             <intent-filter>
